--- a/edulearn-frontend/public/index.html
+++ b/edulearn-frontend/public/index.html
@@ -45,7 +45,7 @@
       })();
     </script>
     
-    <title>EduLearn - EdTech Platform</title>
+    <title>SpyPro Security Solutions Pvt.Ltd.- EdTech Platform</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
